--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,10 @@ python = "^3.11"
 pymongo = "^4.6.2"
 cascade = "^0.1"
 mongoengine = "^0.28.0"
+redis = "^5.0.2"
+redis-lru = "^0.1.2"
+pika = "^1.3.2"
+faker = "^23.3.0"
 
 
 [build-system]
